--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ body #header {
 	max-width: 100%;
 	width: 100%;
 	padding: 0;
+    min-height: 1500px;
 }
 .wrapper-content {
 	max-width: 1224px;
@@ -77,6 +78,10 @@ body #header .top-header {
 body #header .top-header .input-wrapper {
     display: inline-flex;
 }
+
+body #header .main-header {
+    background-color: #fff;
+}
 body #header .main-header .search {
     position: relative;
 }
@@ -94,7 +99,9 @@ body #header .main-header .search button {
     right: 0;
     top: 0;
 }
-
+body #header .main-header .main-bar {
+    box-shadow: 0px 4px 6px 0px #00000014;
+}
 body #header .main-header .main-bar .wrapper {
     display: flex;
     align-items: center;
@@ -104,6 +111,26 @@ body #header .main-header .main-bar .wrapper {
 body #header .main-header .navigation {
     display: flex;
     justify-content: space-between;
+    width: 400px;
+    align-items: center;
+    font-size: 14px;
+}
+body #header .main-header .navigation > div {
+    display: flex;
+    cursor: pointer;
+}
+body #header .main-header .navigation > div img {
+    margin-right: 8px;
+}
+body #header .main-header .navigation .cart {
+    width: 134px;
+    height: 46px;
+    border-radius: 8px;
+    border: 1px solid #FAA500;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 14px;
 }
 
 /* MENU HEADER */
@@ -133,12 +160,25 @@ body #header .main-header .menu-header .wrapper ul li.highlight {
     color: #FAA500;
     font-weight: bold;
 }
+body #header .main-header .menu-header .wrapper ul li.highlight img {
+    margin-right: 8px;
+}
 
 
 /* FULL BANNER */
 
+.fullbanner img {
+    width: 100%;
+    height: 100%;
+}
+
 
 /* SLICK DOTS CUSTOM */
+.fullbanner .slick-dots {
+    bottom: 40px;
+    position: absolute;
+    width: 100%;
+}
 .fullbanner .slick-dots {
 	position: relative;
 	display: -webkit-box !important;
@@ -149,12 +189,12 @@ body #header .main-header .menu-header .wrapper ul li.highlight {
 	justify-content: center;
 }
 .fullbanner .slick-dots li {
-	margin: 0;
+
 }
 .fullbanner .slick-dots li button {
 	background-color: transparent;
-	width: 44px;
-	height: 3px;
+	width: 16px;
+	height: 16px;
 	font-size: 0;
     border: 1px solid #FAA500;
 }
@@ -162,7 +202,60 @@ body #header .main-header .menu-header .wrapper ul li.highlight {
 	background-color: #FAA500;
 	opacity: 1;
 }
-.fullbanner .slick-dots li .slick-active button {
+.fullbanner .slick-dots li.slick-active button {
 	background-color: #FAA500;
-	height:6px
+}
+.fullbanner .slick-dots li button:before {
+    display: none;
+}
+.slick-prev:before, .slick-next:before {
+
+}
+.slick-prev:before {
+    background-image: url('svgs/arrow_left.svg');
+
+    
+}
+.slick-next:before {
+    background-image: url('svgs/arrow_right.svg');
+}
+
+
+
+.general-conditions {
+    margin-bottom: 50px;
+}
+.conditions-content .card {
+    max-width: 307px;
+    padding: 15px;
+    box-sizing: border-box;
+    font-size: 12px;
+    background-color: #efefef;
+}
+.conditions-title {
+    font-family: Titillium Web;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 24.34px;
+    text-align: center;
+    margin-bottom: 18px;
+}
+.card.products.slick-slide.slick-active {
+    display: flex;
+}
+
+
+.carousel-brands .brand {
+    float: left;
+}
+.carousel-brands .brands-title {
+    font-family: Titillium Web;
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 48.67px;
+    text-align: center;
+    margin-bottom: 22px;
+}
+div#footer {
+    height: 496px;
 }
